[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Main Menu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/ProcrastinatingPixie-WyVOO.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Animations/option_selected.tres" type="Animation" id=3]
[ext_resource path="res://Animations/option_quit_selected.tres" type="Animation" id=4]

[sub_resource type="DynamicFont" id=1]
size = 90
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 45
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 45
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="LevelChangerContainer" type="Node" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.690196, 0.819608, 0.533333, 1 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -204.5
margin_top = 70.0
margin_right = 204.5
margin_bottom = 174.0
custom_fonts/font = SubResource( 1 )
text = "JUMPBOY"

[node name="Play" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.5
margin_top = -16.5
margin_right = 52.5
margin_bottom = 36.5
mouse_filter = 1
custom_fonts/font = SubResource( 2 )
text = "PLAY"
align = 1

[node name="Quit" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.0
margin_top = 33.5
margin_right = 53.0
margin_bottom = 86.5
mouse_filter = 1
custom_fonts/font = SubResource( 3 )
text = "QUIT"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/option_play_selected = ExtResource( 3 )
anims/option_quit_selected = ExtResource( 4 )

[connection signal="mouse_entered" from="Play" to="." method="_Play_mouse_entered"]
[connection signal="mouse_exited" from="Play" to="." method="_on_Play_mouse_exited"]
[connection signal="mouse_entered" from="Quit" to="." method="_on_Quit_mouse_entered"]
[connection signal="mouse_exited" from="Quit" to="." method="_on_Quit_mouse_exited"]
